# ltspice_simulator_cpp_sdl2

./: .gitignore  CMakeLists.txt  ChartWindow.cpp  ChartWindow.h  Circuit.cpp  Circuit.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Dialogs.cpp  Dialogs.h  NetworkDialog.cpp  NetworkDialog.h  PlotWindow.cpp  PlotWindow.h  SchematicWidget.cpp  SchematicWidget.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TransientDialog.cpp  TransientDialog.h  ValueDialog.cpp  ValueDialog.h  Waveform.cpp  Waveform.h  main.cpp  main_cli.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Schematics/: draft.txt
